# daily-covid

./: .gitignore  LICENSE  README-pip.md  README.md  backup_config.toml  covid_plot.py  create-readme-example.sh  los_angeles_california.csv  new.toml  nytimes_covid.py  orange_new_york.csv  package-publish.sh  pyproject.toml  quicktest.sh  test_pkg.py  testing.py  update_pypi.sh
cpp-stuff/: CovidData.cpp  a.out  run-cpp.sh
dailycovid/: __init__.py  __main__.py  american_states.py  covid_plot.py  dailycovid.py
scripts/: package-publish-dailycovid.sh  package-publish.sh  poetry-version-verify.sh  quicktest.sh  test_pkg.py  update-figures.sh
