[tool.poetry]
name = "dailycovid"
version = "1.1.0"
description = "U.S.A daily covid information."
authors = ["fitzy1293 <berkshiremind@gmail.com>"]
license = "MIT"
readme = "README.md"


include = [
    "LICENSE",
]

[tool.poetry.dependencies]
# Updated Python version
python = "^3.6"
requests = "^2.24.0"
numpy = "^1.0.0"
matplotlib = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
dailycovid = 'dailycovid:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
